--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,16 @@ android {
             keyPassword 'android'
         }
     }
+    //   signingConfigs {
+    //     release {
+    //         if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+    //             storeFile file(MYAPP_UPLOAD_STORE_FILE)
+    //             storePassword MYAPP_UPLOAD_STORE_PASSWORD
+    //             keyAlias MYAPP_UPLOAD_KEY_ALIAS
+    //             keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+    //         }
+    //     }
+    // }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
@@ -157,7 +167,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            //   signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
@@ -179,6 +189,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
@@ -203,3 +214,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
