--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@react-navigation/bottom-tabs": "^5.0.7",
     "@react-navigation/native": "^5.0.7",
     "@react-navigation/stack": "^5.0.9",
+    "firebase": "^7.9.3",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-ionicons": "^4.6.4",
     "react-native-paper": "^3.6.0",
@@ -23,7 +26,11 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.13",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-zoom-lightbox": "0.0.2"
+    "react-native-zoom-lightbox": "0.0.2",
+    "react-redux": "^7.2.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.19",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
